feat(auth): add (authorization) role management for users and implement ownership checks for posts
